test_regress/t/t_param_implicit_bad.out
%Error: t/t_param_implicit_bad.v:9:15: parameter port declarations require 'parameter' keyword before implicit data types (IEEE 1800-2023 6.20.1/A.2.1.1)
                                     : ... Suggest add 'parameter' before here
    9 | module sub1 #([7:0] PAR1 = 1);   
      |               ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_param_implicit_bad.v:12:42: parameter port declarations require 'parameter' keyword before implicit data types (IEEE 1800-2023 6.20.1/A.2.1.1)
                                      : ... Suggest add 'parameter' before here
   12 | module sub2 #(parameter real PAR1 = 1.0, signed PAR2 = 2);
      |                                          ^~~~~~
%Error: t/t_param_implicit_bad.v:15:43: parameter port declarations require 'parameter' keyword before implicit data types (IEEE 1800-2023 6.20.1/A.2.1.1)
                                      : ... Suggest add 'parameter' before here
   15 | module sub3 #(localparam real PAR1 = 1.0, signed PAR2 = 2);
      |                                           ^~~~~~
%Error: Exiting due to
